# dxrtracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GenerateVS2026.cmd  README.md
dxray/: CMakeLists.txt
dxray/cmake/: config.cmake.in
dxray/cmake/utility/: targetUtility.cmake
dxray/core/: CMakeLists.txt
dxray/core/include/core/: debug.h  pch.h  string.h  valueTypes.h
dxray/core/include/core/fileSystem/: fileIO.h  stbIO.h
dxray/core/include/core/time/: stopwatch.h
dxray/core/include/core/vath/: matrix2x2.h  matrix3x3.h  matrix4x4.h  quaternion.h  rect.h  vath.h  vathTemplate.h  vathUtility.h  vector2.h  vector3.h  vector4.h
dxray/core/src/fileSystem/: fileIO.cpp  stbIO.cpp
dxray/core/src/thread/: taskScheduler.cpp
dxray/dxrtracer/: CMakeLists.txt
dxray/dxrtracer/include/dxrtracer/: dxrtracer.h  pch.h  renderer.h  window.h
dxray/dxrtracer/include/dxrtracer/dx12/: d3d12CommandBuffer.h  d3d12CommandQueue.h  d3d12Device.h
dxray/dxrtracer/src/: dxrtracer.cpp  renderer.cpp  window.cpp
dxray/dxrtracer/src/dx12/: d3d12CommandBuffer.cpp  d3d12CommandQueue.cpp  d3d12Device.cpp
dxray/riow/: CMakeLists.txt
dxray/riow/include/riow/: camera.h  color.h  material.h  pch.h  perlin.h  ray.h  renderer.h  riow.h  texture.h
dxray/riow/include/riow/traceable/: raytraceable.h  sphere.h
dxray/riow/src/: camera.cpp  perlin.cpp  renderer.cpp  riow.cpp  scene.cpp
dxray/riow/src/traceable/: sphere.cpp
dxray/tests/: CMakeLists.txt
dxray/tests/vath/: quaternion_testSuite.cpp
engine/: CMakeLists.txt
engine/cmake/: config.cmake.in
engine/cmake/utility/: targetUtility.cmake
engine/modules/: CMakeLists.txt
engine/modules/core/: CMakeLists.txt
engine/modules/core/include/core/: debug.h  pch.h  string.h  valueTypes.h
engine/modules/core/include/core/containers/: array.h  sparseArray.h  sparseSet.h
engine/modules/core/include/core/fileSystem/: fileIO.h
engine/modules/core/include/core/memory/: memory.h
engine/modules/core/include/core/thread/: taskScheduler.h
engine/modules/core/include/core/vath/: matrix2x2.h  matrix3x3.h  matrix4x4.h  quaternion.h  rect.h  vath.h  vathHlsl.h  (+4 more)
engine/modules/core/src/: winApiString.cpp
engine/modules/core/src/fileSystem/: fileIO.cpp
engine/modules/dxrtracer/: CMakeLists.txt
engine/modules/dxrtracer/include/dxrtracer/: accelerationStructure.h  camera.h  descriptorHeap.h  dxShaderCompiler.h  modelLoader.h  pch.h  renderer.h  renderpass.h  scene.h  shaderCompiler.h  shaderConstructs.h  uploadBuffer.h  window.h
engine/modules/dxrtracer/src/: accelerationStructure.cpp  descriptorHeap.cpp  dxShaderCompiler.cpp  dxrtracer.cpp  modelLoader.cpp  renderer.cpp  renderpass.cpp  scene.cpp  uploadBuffer.cpp  window.cpp
engine/modules/riow/: CMakeLists.txt
engine/modules/riow/include/riow/: camera.h  image.h  material.h  ray.h  renderer.h  scene.h  texture.h
engine/modules/riow/src/: camera.cpp  image.cpp  perlin.cpp  renderer.cpp  riow.cpp
engine/shaders/: CMakeLists.txt  global.hlsli  math.hlsli  random.hlsli  raytracer.rt.hlsl
engine/shaders/src/: raytracer.rt.hlsl
engine/tests/: CMakeLists.txt
engine/tests/containers/: sparseSet_testSuite.cpp
engine/tests/vath/: matrix2x2_testSuite.cpp  matrix3x3_testSuite.cpp  matrix4x4_testSuite.cpp  vector2_testSuite.cpp  vector3_testSuite.cpp
(+4 files in other folders)
